# tagledger

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  MAC_DEMO.md  README.md  REQUIREMENTS.md  Start Mac Demo.command  Start TagLedger Service.cmd  Start Windows LAN.cmd  TODO.md  alembic.ini  pyproject.toml  requirements-runtime.txt
.github/workflows/: preflight.yml
.omx/: metrics.json
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_add_location_kind.py  0003_add_factory_id_to_all_tables.py  0004_outbound_rollback_and_verification.py  0005_add_transfer_id.py  0006_return_signoff_models.py  0007_signoff_pairing.py  0008_signoff_pairing_usage.py
backend/app/: auth.py  cli.py  config.py  database.py  main.py  models.py  pairing.py  schemas.py
backend/tests/: conftest.py  test_alembic_revisions.py  test_api.py  test_auth.py  test_barcode_provider.py  test_dedup.py  test_etl_sqlite_to_postgres.py  test_factory_summary.py  test_file_storage.py  test_i18n.py  test_inventory.py  (+23 more)
config/: saas_selectors.yaml  saas_selectors_test.yaml  settings.yaml  settings.yaml.template
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lan_ip.rs  main.rs  sidecar.rs
docs/: CONTRIBUTION_METRICS.md  M3_WINDOWS_MANUAL_VERIFICATION.md  M4_MACOS_PLAN.md  PHASE4_PLAYWRIGHT.md  RELEASE_PACKAGING.md  SIGNOFF_INTEGRATION_SPEC.md  SIGNOFF_SAAS_SPEC.md  SYNC_RULES.md  UI_REVAMP_NOTES.md  UI_STYLE_GUIDE.md  WINDOWS_DEPLOY.md
scripts/: browser_role_flow.py  build_exe.ps1  check_ui_contracts.sh  cleanup_old_images.ps1  configure_sync_remotes.sh  etl_sqlite_to_postgres.py  export_sustainability_snapshot.ps1  export_sustainability_snapshot.py  export_sustainability_snapshot.sh  install_windows.ps1  make_release.ps1  make_release.sh  print_lan_qr.py  remote_diag_start.ps1  remote_start_tagledger.ps1  reset_test_data.ps1  reset_test_data.sh  retry_failed.ps1  review_push_guard.sh  run_dev.ps1  run_lan.ps1  run_mac_demo.sh  run_mobile_test.sh  run_preflight.ps1  run_preflight.sh  security_check.sh  seed_user_account.py  site_ui_qa.py  smoke_mac_demo.sh  smoke_phase1.ps1  windows_fleet_deploy.sh  windows_fleet_devices.txt.example
(+68 files in other folders)
