[project]
name = "machine-label-ocr"
version = "0.1.0"
description = "Local-first machine label OCR ingestion MVP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
barcode = ["pyzbar>=0.1.9", "Pillow>=10.0.0"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0.0", "opencv-python>=4.9.0"]
submit = ["playwright>=1.45"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["backend*"]
