[project]
name = "tagledger"
version = "0.1.0"
description = "Local-first OCR, barcode, and inventory ledger workflows for field teams"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.11",
]
barcode = ["pyzbar>=0.1.9", "Pillow>=10.0.0"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0.0", "opencv-python>=4.9.0"]
submit = ["playwright>=1.45"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"backend/app/auth.py" = ["B008"]
"backend/app/main.py" = ["B008"]
"backend/app/routes/*.py" = ["B008"]
"backend/tests/*.py" = ["F811"]

[project.scripts]
tagledger-server = "backend.app.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]
