[package]
name = "tagledger-launcher"
version = "0.1.0"
description = "TagLedger Windows beta launcher"
authors = ["TagLedger"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
dirs = "6"
if-addrs = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
